--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "date-fns": "^3.6.0",
     "firebase": "^10.12.4",
     "react": "^18.3.1",
