--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
+    "react-ga": "^3.3.1",
     "react-icons": "^5.2.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.25.1",
